<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTask">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="812dp"
        android:layout_height="889dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:srcCompat="@drawable/bg1" />


    <TextView
        android:id="@+id/addTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/add_task"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEdittext"
        android:layout_width="369dp"
        android:layout_height="55dp"
        android:background="@drawable/aqua_boder"
        android:fontFamily="@font/archivo_black"
        android:hint="@string/enter_task_title2"
        android:maxLines="2"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="@color/_616161"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="369dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/aqua_boder"
        android:fontFamily="serif-monospace"
        android:hint="@string/enter_task_date2"
        android:inputType="date"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="@color/_616161"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contentEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdittext" />


    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="366dp"
        android:layout_height="383dp"
        android:background="@drawable/aqua_boder"
        android:fontFamily="@font/andika_new_basic"
        android:gravity="top"
        android:hint="@string/enter_task_description2"
        android:maxLines="3"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="172dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/save_task2"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
